refactor: stream 로직 개선